5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1649_2703.log
== TEST (2019-04-15 22:08:26) 
-- CODE:
a = int(input("idade"))
if a>=18:
	mensagem = eleitor
if a<18:
	mensagem = nao_eleitor
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:08:59) 
-- CODE:
a = int(input("idade"))
if a>=18:
	mensagem = print("eleitor")
if a<18:
	mensagem = print("nao_eleitor")
print(mensagem)
-- OUTPUT:
nao_eleitor
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:09:29) 
-- CODE:
a = int(input("idade"))
if a>=18:
	mensagem = print("eleitor")
if a<18:
	mensagem = print("nao_eleitor")
print(mensagem)
-- OUTPUT:
nao_eleitor
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:09:53) 
-- CODE:
a = int(input("idade"))
if (a>=18:)
	mensagem = print("eleitor")
if (a<18:)
	mensagem = print("nao_eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a>=18:)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:10:04) 
-- CODE:
a = int(input("idade"))
if (a>=18):
	mensagem = print("eleitor")
if (a<18):
	mensagem = print("nao_eleitor")
print(mensagem)
-- OUTPUT:
nao_eleitor
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:10:08) 
-- CODE:
a = int(input("idade"))
if (a>=18):
	mensagem = print("eleitor")
if (a<18):
	mensagem = print("nao_eleitor")
print(mensagem)
-- EXECUTION TIME:
0.185844
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
None
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
None
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:13:13) 
-- CODE:
a = int(input("idade"))
if (a >= 18):
	mensagem = "eleitor"
if (a < 18):
	mensagem = "nao_eleitor"
print(mensagem)
-- EXECUTION TIME:
0.196533
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
